GUI (#84)
* aggiunta immagini carte e aggiunta bottone leave game

* modifica waiting room e aggiunta end game

* fix

* fix all gui

* x

* final fix

* x

---------

Co-authored-by: WilliArti <77014144+WilliArti@users.noreply.github.com>